--- a/index.html
+++ b/index.html
@@ -168,6 +168,11 @@
       <li><a href="https://github.com/cyevgeniy/universal">The Universal starter template for Eleventy</a></li>
     </ul>
     <h2 id="music"> Music recommendations</h2>
+    <h3 id="2022" tabindex="-1">2023</h3>
+    <ul>
+      <li><a href="https://1nand1.bandcamp.com/track/wohlf-hlen"> Nand - Wohlf​ü​hlen </a></li>
+      <li><a href="https://trstmusic.bandcamp.com/track/bicep-2"> TR/ST - Bicep </a></li>
+    </ul>
     <h3 id="2022" tabindex="-1">2022</h3>
     <ul>
       <li><a href="https://soundcloud.com/simnagai/flight-to-brazil">Sim Nagai - Trip to Brazil</a></li>
