--- a/index.html
+++ b/index.html
@@ -14,12 +14,19 @@
 
     <h2> Table of Contents </h2>
     <ul>
+      <li><a href="#contacts">Contacts</a></li>
       <li><a href="#timeline">Timeline</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#music">Music recommendations</a></li>
       <li><a href="#books">Books I've read</a></li>
     </ul>
-    <h2 id="timeline"> Timeline </h2>
+
+    <h2 id="contacts"><a href="#contacts">#</a> Contacts </h2>
+    <p>
+      Feel free to email me: ycbn@ychbn.com
+    </p>
+
+    <h2 id="timeline"><a href="#timeline">#</a> Timeline </h2>
 
     <h3>11/27/2023</h3>
     <p>
@@ -141,7 +148,7 @@
     </p>
 
 
-    <h2 id="projects"> Projects </h2>
+    <h2 id="projects"><a href="#projects">#</a> Projects </h2>
     <h3 id="vue" tabindex="-1">Vue</h3>
     <ul>
       <li><a href="https://github.com/cyevgeniy/vue-ldemort">Vue-ldemort</a>. Basic Vue component for creating multi-step workflows. Inspired by react-albus</li>
@@ -167,7 +174,7 @@
         almost without CSS.</li>
       <li><a href="https://github.com/cyevgeniy/universal">The Universal starter template for Eleventy</a></li>
     </ul>
-    <h2 id="music"> Music recommendations</h2>
+    <h2 id="music"><a href="#music">#</a> Music recommendations</h2>
     <h3 id="2022" tabindex="-1">2023</h3>
     <ul>
       <li><a href="https://1nand1.bandcamp.com/track/wohlf-hlen"> Nand - Wohlf​ü​hlen </a></li>
@@ -205,14 +212,14 @@
       <li><a href="https://youtube.com/watch?v=H2qb0gb-WZ4">Suzi Wu - Taken care of</a></li>
     </ul>
 
-    <h2 id="books"> Read list </h2>
+    <h2 id="books"><a href="#books">#</a> Books I've read </h2>
 
     <h3>2023-...</h3>
     <ul>
       <li>Orson Scott Card - Ender's game</li>
     </ul>
 
-    <h3>2020-...</h3>
+    <h3>2020-2022</h3>
     <ul>
       <li> Донато Карризи - Подсказчик </li>
       <li> Аркадий и Борис Стругацкие - Отель "У погибшего альпиниста" </li>
