--- a/site/index.html
+++ b/site/index.html
@@ -174,6 +174,16 @@
         almost without CSS.</li>
       <li><a href="https://github.com/cyevgeniy/universal">The Universal starter template for Eleventy</a></li>
     </ul>
+
+    <h3 id="colorschemes">Color schemes </h3>
+    <h4> Comments-only colorscheme </h4>
+    <p> As stated in the colorscheme's name, it has no syntax highlighting
+    except comments.</p>
+    <ul>
+      <li><a href="https://github.com/cyevgeniy/comments-only">Sublime text </a></li>
+      <li><a href="https://github.com/cyevgeniy/comments-only-theme-vscode">VS Code </a></li>
+    </ul>
+
     <h2 id="music"><a href="#music">#</a> Music recommendations</h2>
     <h3 id="2022" tabindex="-1">2023</h3>
     <ul>
