Update books list

--- a/site/index.html
+++ b/site/index.html
@@ -28,6 +28,9 @@
 
     <h2 id="timeline"><a href="#timeline">#</a> Timeline </h2>
 
+    <h3>12/10/2023</h3>
+    <p> It's cold, there is a lot of snow, and it means that I should play Fahrenheit. </p>
+
     <h3>11/27/2023</h3>
     <p>
       Yeah, new redesign of this site.
@@ -226,6 +229,7 @@
 
     <h3>2023-...</h3>
     <ul>
+      <li>Joe Abercrombie - The Blade Itself</li>
       <li>Orson Scott Card - Ender's game</li>
     </ul>
 
