--- a/site/index.html
+++ b/site/index.html
@@ -17,6 +17,7 @@
       <li><a href="#contacts">Contacts</a></li>
       <li><a href="#timeline">Timeline</a></li>
       <li><a href="#projects">Projects</a></li>
+      <li><a href="#tools">Tools</a></li>
       <li><a href="#music">Music recommendations</a></li>
       <li><a href="#books">Books I've read</a></li>
     </ul>
@@ -185,6 +186,23 @@
     <ul>
       <li><a href="https://github.com/cyevgeniy/comments-only">Sublime text </a></li>
       <li><a href="https://github.com/cyevgeniy/comments-only-theme-vscode">VS Code </a></li>
+    </ul>
+
+
+    <h2 id="tools"><a href="#tools">#</a> Tools </h2>
+    <h3> Software </h3>
+    <ul>
+      <li> Sublime Text </li>
+      <li> Sublime Merge </li>
+      <li> Figma </li>
+      <li> Firefox </li>
+      <li> Neovim </li>
+      <li> Hugo </li>
+    </ul>
+
+    <h3>Services</h3>
+    <ul>
+      <li>Fastmail</li>
     </ul>
 
     <h2 id="music"><a href="#music">#</a> Music recommendations</h2>
