Update music recommendations

--- a/site/index.html
+++ b/site/index.html
@@ -208,6 +208,7 @@
     <h2 id="music"><a href="#music">#</a> Music recommendations</h2>
     <h3 id="2022" tabindex="-1">2023</h3>
     <ul>
+      <li><a href="https://lustmord.bandcamp.com/track/blood-deep-in-dread">Lustmord - Blood Deep In Dread </a></li>
       <li><a href="https://1nand1.bandcamp.com/track/wohlf-hlen"> Nand - Wohlf​ü​hlen </a></li>
       <li><a href="https://trstmusic.bandcamp.com/track/bicep-2"> TR/ST - Bicep </a></li>
     </ul>
