add links to other sites

--- a/site/index.html
+++ b/site/index.html
@@ -18,6 +18,7 @@
       <li><a href="#timeline">Timeline</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#tools">Tools</a></li>
+      <li><a href="#links">Links</a></li>
       <li><a href="#music">Music recommendations</a></li>
       <li><a href="#books">Books I've read</a></li>
     </ul>
@@ -203,6 +204,15 @@
     <h3>Services</h3>
     <ul>
       <li>Fastmail</li>
+    </ul>
+
+    <h2 id="links"><a href="#links">#</a> Links </h2>
+    <p> Here I collect interesting web sites and projects </p>
+    <ul>
+      <li><a href="https://antfu.me">antfu.me</a></li>
+      <li><a href="https://www.goatcounter.com">goatcounter.com</a></li>
+      <li><a href="https://sadgrl.online">sadgirl.online</a></li>
+      <li><a href="https://codeyarns.com/tech/">odeyarns.com</a></li>
     </ul>
 
     <h2 id="music"><a href="#music">#</a> Music recommendations</h2>
