--- a/site/index.html
+++ b/site/index.html
@@ -212,7 +212,7 @@
       <li><a href="https://antfu.me">antfu.me</a></li>
       <li><a href="https://www.goatcounter.com">goatcounter.com</a></li>
       <li><a href="https://sadgrl.online">sadgirl.online</a></li>
-      <li><a href="https://codeyarns.com/tech/">odeyarns.com</a></li>
+      <li><a href="https://codeyarns.com/tech/">codeyarns.com</a></li>
     </ul>
 
     <h2 id="music"><a href="#music">#</a> Music recommendations</h2>
