--- a/site/index.html
+++ b/site/index.html
@@ -213,6 +213,7 @@
       <li><a href="https://www.goatcounter.com">goatcounter.com</a></li>
       <li><a href="https://sadgrl.online">sadgirl.online</a></li>
       <li><a href="https://codeyarns.com/tech/">codeyarns.com</a></li>
+      <li><a href="https://cooltext.com">cooltext.com</a></li>
     </ul>
 
     <h2 id="music"><a href="#music">#</a> Music recommendations</h2>
