Add bt.ht to the links list

--- a/site/index.html
+++ b/site/index.html
@@ -210,6 +210,7 @@
     <p> Here I collect interesting web sites and projects </p>
     <ul>
       <li><a href="https://antfu.me">antfu.me</a></li>
+      <li><a href="https://bt.ht">bt.ht</a></li>
       <li><a href="https://www.goatcounter.com">goatcounter.com</a></li>
       <li><a href="https://sadgrl.online">sadgirl.online</a></li>
       <li><a href="https://codeyarns.com/tech/">codeyarns.com</a></li>
