Add links to stagit + git pages generated with it

--- a/site/index.html
+++ b/site/index.html
@@ -27,6 +27,12 @@
     <p>
       Feel free to email me: ycbn@ychbn.com
     </p>
+    <p>
+      Another places:
+    </p>
+    <ul>
+      <li><a href="http://git.ychbn.com" target="_blank"> Git repositories </a></li>
+    </ul>
 
     <h2 id="timeline"><a href="#timeline">#</a> Timeline </h2>
 
@@ -215,6 +221,7 @@
       <li><a href="https://sadgrl.online">sadgirl.online</a></li>
       <li><a href="https://codeyarns.com/tech/">codeyarns.com</a></li>
       <li><a href="https://cooltext.com">cooltext.com</a></li>
+      <li><a href="https://git.codemadness.org/stagit/">stagit - static git page generator</a></li>
     </ul>
 
     <h2 id="music"><a href="#music">#</a> Music recommendations</h2>
