Fix email typo, use https for git repos link

--- a/site/index.html
+++ b/site/index.html
@@ -25,13 +25,13 @@
 
     <h2 id="contacts"><a href="#contacts">#</a> Contacts </h2>
     <p>
-      Feel free to email me: ycbn@ychbn.com
+      Feel free to email me: ychbn@ychbn.com
     </p>
     <p>
       Another places:
     </p>
     <ul>
-      <li><a href="http://git.ychbn.com" target="_blank"> Git repositories </a></li>
+      <li><a href="https://git.ychbn.com" target="_blank"> Git repositories </a></li>
     </ul>
 
     <h2 id="timeline"><a href="#timeline">#</a> Timeline </h2>
