--- a/site/index.html
+++ b/site/index.html
@@ -35,6 +35,8 @@
     </ul>
 
     <h2 id="timeline"><a href="#timeline">#</a> Timeline </h2>
+    <h3>09/01/2024</h3>
+    <p> Days in 2024 without listening Mr.Kitty: 0.</p>
 
     <h3>12/10/2023</h3>
     <p> It's cold, there is a lot of snow, and it means that I should play Fahrenheit. </p>
