Update links to projects + remove universal theme

--- a/site/index.html
+++ b/site/index.html
@@ -164,17 +164,17 @@
     <h2 id="projects"><a href="#projects">#</a> Projects </h2>
     <h3 id="vue" tabindex="-1">Vue</h3>
     <ul>
-      <li><a href="https://github.com/cyevgeniy/vue-ldemort">Vue-ldemort</a>. Basic Vue component for creating multi-step workflows. Inspired by react-albus</li>
+      <li><a href="http://git.ychbn.com/vue-ldemort/file/README.md.html">Vue-ldemort</a>. Basic Vue component for creating multi-step workflows. Inspired by react-albus</li>
       <li><a href="https://vue-hoogle.netlify.app/">Vue-hoogle</a>. Alternative interface for <a href="https://hoogle.haskell.org/">hoogle</a>.</li>
     </ul>
     <h3 id="cli" tabindex="-1">CLI</h3>
     <ul>
-      <li><a href="https://github.com/cyevgeniy/bp">Bpv</a>. Semver version bumper</li>
-      <li><a href="https://github.com/cyevgeniy/pwm">Pwm</a>. Simple password manager</li>
+      <li><a href="https://git.ychbn.com/bp/file/README.md.html">Bpv</a>. Semver version bumper</li>
+      <li><a href="https://git.ychbn.com/pwm/file/README.md.html">Pwm</a>. Simple password manager</li>
     </ul>
     <h3 id="sql" tabindex="-1">SQL</h3>
     <ul>
-      <li><a href="https://github.com/cyevgeniy/pldoc">Pldoc</a>. Documentation generation tool for PL/SQL source code.</li>
+      <li><a href="http://git.ychbn.com/pldoc/file/README.md.html">Pldoc</a>. Documentation generation tool for PL/SQL source code.</li>
       <li><a href="http://orasql.ru">Orasql.ru</a>. A tutorial on SQL and PL/SQL languages in the Oracle Database.</li>
     </ul>
     <h3 id="documentation" tabindex="-1">Documentation</h3>
@@ -183,9 +183,8 @@
     </ul>
     <h3 id="ssg" tabindex="-1">SSG</h3>
     <ul>
-      <li><a href="https://github.com/cyevgeniy/jekyll-true-minimal">Jekyll true minimal theme</a>. Minimal Jekyll theme
+      <li><a href="http://git.ychbn.com/jekyll-true-minimal/file/README.md.html">Jekyll true minimal theme</a>. Minimal Jekyll theme
         almost without CSS.</li>
-      <li><a href="https://github.com/cyevgeniy/universal">The Universal starter template for Eleventy</a></li>
     </ul>
 
     <h3 id="colorschemes">Color schemes </h3>
