--- a/site/index.html
+++ b/site/index.html
@@ -226,7 +226,11 @@
     </ul>
 
     <h2 id="music"><a href="#music">#</a> Music recommendations</h2>
-    <h3 id="2022" tabindex="-1">2023</h3>
+    <h3 id="2024"> 2024 </h3>
+    <ul>
+      <li><a href="https://piped.video/watch?v=qovlQ1M-1R0">Mr. Kitty - A New Hour </a></li>
+    </ul>
+        <h3 id="2023" tabindex="-1">2023</h3>
     <ul>
       <li><a href="https://lustmord.bandcamp.com/track/blood-deep-in-dread">Lustmord - Blood Deep In Dread </a></li>
       <li><a href="https://1nand1.bandcamp.com/track/wohlf-hlen"> Nand - Wohlf​ü​hlen </a></li>
