Add music recommendations

--- a/site/index.html
+++ b/site/index.html
@@ -228,6 +228,7 @@
     <h2 id="music"><a href="#music">#</a> Music recommendations</h2>
     <h3 id="2024"> 2024 </h3>
     <ul>
+      <li><a href="https://www.youtube.com/watch?v=iIvIwiO27og">Morphine - Empty box </a></li>
       <li><a href="https://piped.video/watch?v=qovlQ1M-1R0">Mr. Kitty - A New Hour </a></li>
     </ul>
         <h3 id="2023" tabindex="-1">2023</h3>
