--- a/site/index.html
+++ b/site/index.html
@@ -35,6 +35,13 @@
     </ul>
 
     <h2 id="timeline"><a href="#timeline">#</a> Timeline </h2>
+
+    <h3>01/05/2024</h3>
+    <p>
+      Bought another one domain.
+      I decided to do it when an HR wasn't able to pronounce my email address.
+    </p>
+
     <h3>09/01/2024</h3>
     <p> Days in 2024 without listening Mr.Kitty: 0.</p>
 
