--- a/site/index.html
+++ b/site/index.html
@@ -230,6 +230,7 @@
       <li><a href="https://codeyarns.com/tech/">codeyarns.com</a></li>
       <li><a href="https://cooltext.com">cooltext.com</a></li>
       <li><a href="https://git.codemadness.org/stagit/">stagit - static git page generator</a></li>
+      <li><a href="https://explore.marginalia.nu/view"> Explore interesting websites</a></li>
     </ul>
 
     <h2 id="music"><a href="#music">#</a> Music recommendations</h2>
