update reading list + music

--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
     <h2 id="music"><a href="#music">#</a> Music recommendations</h2>
     <h3 id="2024"> 2024 </h3>
     <ul>
+      <li><a href="https://jacaszek2.bandcamp.com/track/lament">Zacaszek Michal - Lament </a></li>
       <li><a href="https://www.youtube.com/watch?v=iIvIwiO27og">Morphine - Empty box </a></li>
       <li><a href="https://piped.video/watch?v=qovlQ1M-1R0">Mr. Kitty - A New Hour </a></li>
     </ul>
@@ -281,6 +282,10 @@
 
     <h3>2023-...</h3>
     <ul>
+      <li>Франк Тилье - Синдром Е</li>
+      <li>Alastair Reynolds - The Prefect</li>
+      <li>Joe Abercrombie - Last arguments of Kings</li>
+      <li>Joe Abercrombie - The last argument of kings</li>
       <li>Joe Abercrombie - The Blade Itself</li>
       <li>Orson Scott Card - Ender's game</li>
     </ul>
