Update music list

--- a/index.html
+++ b/index.html
@@ -234,6 +234,11 @@
     </ul>
 
     <h2 id="music"><a href="#music">#</a> Music recommendations</h2>
+    <h3 id="2025"> 2025 </h3>
+    <ul>
+      <li><a href="https://crackcloud.bandcamp.com/track/please-yourself">Crack Cloud - Please Yourself </a></li>
+      <li><a href="https://vandalmoon.bandcamp.com/track/diamonds-pearls-feat-vangie-lee">Vandal Moon - Diamonds & Pearls (feat Vangie Lee) </a></li>
+    </ul>
     <h3 id="2024"> 2024 </h3>
     <ul>
       <li><a href="https://jacaszek2.bandcamp.com/track/lament">Zacaszek Michal - Lament </a></li>
